# tpch-query5

./: CMakeLists.txt  SOLUTION.md  STEPS.md
include/: query5.hpp
results/: result_t4.txt
src/: main.cpp  query5.cpp
